change header to musical instruments i like

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h1
 
          -->
         <h1>
-          דף אינטרנט ממש לא מגניב   
+          כלי נגינה שאני אוהב  
         </h1>
 
         בדף אינטרנט יכולים להיות כל מני דברים
